# secondwind

./: .gitignore  BUG_TRACKER.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-node.yml
companion/: README.md
companion/src-tauri/: Cargo.toml  README.md  tauri.conf.json
companion/src-tauri/src/: apollo.rs  app_control.rs  auto_connect.rs  dev_cli.rs  discovery.rs  disk_control.rs  host_state.rs  jobs_cli.rs  lib.rs  main.rs  node_client.rs  node_ops.rs  screen_control.rs  usb_control.rs
companion/ui/: app.js  index.html  styles.css
crates/sw-agent/: Cargo.toml
crates/sw-agent/src/: api.rs  apps.rs  capability_detection.rs  certificates.rs  discovery.rs  disk.rs  identity.rs  jobs.rs  lib.rs  main.rs  pairing_state.rs  share.rs  tls.rs  usb.rs
crates/sw-core/: Cargo.toml
crates/sw-core/src/: agent_api.rs  apps.rs  capabilities.rs  certificates.rs  config.rs  discovery.rs  kiosk.rs  lib.rs  pairing.rs  protocol.rs
crates/sw-kiosk/: Cargo.toml
crates/sw-kiosk/src/: lib.rs  main.rs  screens.rs  supervise.rs
crates/sw-launcher/: Cargo.toml
crates/sw-launcher/src/: decision.rs  lib.rs  main.rs  seamless.rs  wol.rs
docs/: ARCHITECTURE.md  BACKLOG.md  COMPATIBILITY.md  DECISIONS.md  FIRST-SETUP.md  HARDWARE-VALIDATION.md  NODE-SETUP.md  PHASE0-TROUBLESHOOTING.md  PROFILE-dev-machine.md  SETUP-DEV.md  UPSTREAM.md  USB-SETUP.md  V0.1-CHECKLIST.md
installer/innosetup/: README.md  THIRD-PARTY.md  secondwind.iss
node-image/: README.md
node-image/kiosk/: README.md
node-image/live-build/: README.md  build.sh
node-image/live-build/auto/: config
node-image/live-build/config/archives/: moonlight.list.chroot.in
node-image/live-build/config/hooks/normal/: 0100-secondwind-user.hook.chroot  0200-enable-services.hook.chroot
node-image/live-build/config/includes.chroot/etc/polkit-1/rules.d/: 50-secondwind-disk.rules
node-image/live-build/config/includes.chroot/etc/secondwind/: apps.json  jobs.json  sw-agent.env  sw-kiosk.env  sw-share.env  sw-xpra.env
node-image/live-build/config/includes.chroot/etc/sudoers.d/: secondwind-usb
node-image/live-build/config/includes.installer/: preseed.cfg
node-image/live-build/config/package-lists/: secondwind.list.chroot
node-image/systemd/: secondwind-disk-provision.service  secondwind-disk.service  secondwind-share.service  secondwind-usbipd.service  sw-agent.env.example  sw-agent.service  sw-kiosk.env.example  sw-kiosk.service  sw-xpra-provision.service  sw-xpra.service
scripts/node/: README.md  install-node.sh  secondwind-disk-provision.sh  secondwind-disk.sh  secondwind-run-synced.sh  secondwind-share.sh  secondwind-usb.sh  secondwind-xpra-provision.sh
scripts/windows/: Connect-SecondWindDisk.ps1  Disconnect-SecondWindDisk.ps1  Enable-SecondWindShare.ps1  README.md  Register-SecondWindContextMenu.ps1
