[workspace]
resolver = "3"
members = [
    "crates/sw-core",
    "crates/sw-agent",
    "crates/sw-launcher",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/AminooAcid/secondwind"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sw-core = { path = "crates/sw-core" }
uuid = { version = "1.18", features = ["serde", "v4"] }
