[package]
name = "secondwind-companion"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AminooAcid/secondwind"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sw-core = { path = "../../crates/sw-core" }
tauri = { version = "2", features = [] }

[workspace]
