[package]
name = "secondwind-companion"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AminooAcid/secondwind"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.2"
mdns-sd = "0.20"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sw-core = { path = "../../crates/sw-core" }
sw-launcher = { path = "../../crates/sw-launcher" }
tauri = { version = "2", features = [] }
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }

[workspace]
