[package]
name = "sw-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
getrandom = "0.2"
hex = "0.4"
mdns-sd = "0.20"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sw-core.workspace = true
tokio = { version = "1.53", features = ["macros", "net", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
