[package]
name = "sw-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
getrandom = "0.2"
mdns-sd = "0.20"
rustls = "0.23"
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
sw-core.workspace = true
tokio = { version = "1.53", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
path = "src/lib.rs"
